k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -o k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert -o k8s
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/node-boilerplate-network: "true"
        io.kompose.service: nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: ""
        name: nginx
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
