k8s/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -o k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: node
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert -o k8s
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/node-boilerplate-network: "true"
        io.kompose.service: node
    spec:
      containers:
        - env:
            - name: NODE_ENV
              valueFrom:
                configMapKeyRef:
                  key: NODE_ENV
                  name: docker-env-app-development-env
          image: node
          imagePullPolicy: ""
          command: ["/bin/sh"]
          args: ["-c", "while true; do echo Done Deploying sv-premier; sleep 3600;done"]
          name: nodejs-boilerplate
          ports:
            - containerPort: 4000
          resources: {}
          workingDir: /var/www/boilerplate
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
